<resources>
    <string name="app_name">宝库</string>
    <string name="check_network">网络错误,请检查网络</string>
    <string name="menu_index_text">首页</string>
    <string name="menu_map_text">地图找库</string>
    <string name="menu_news_text">宝库动态</string>
    <string name="menu_box_text">我的保管箱</string>
    <string name="menu_order_text">我的订单</string>
    <string name="menu_account_text">我的账户</string>
    <string name="nearby_project">附近宝库</string>
    <string name="item_more">更多</string>
    <string name="nearby_most">里你最近</string>
    <string name="project_detail">查看详情</string>
    <string name="project_road">路线导航</string>
    <string name="rent_box">我要租箱</string>
    <string name="desc">简介</string>
    <string name="project_pic">现场图片</string>
    <string name="radio_list">列表</string>
    <string name="radio_map">地图</string>
    <string name="radio_bus">公交</string>
    <string name="radio_car">驾车</string>
    <string name="radio_walk">步行</string>
    <string name="not_login">尚未登录</string>
    <string name="btn_login">立即登录</string>
    <string name="btn_scan">扫一扫</string>
    <string name="btn_qrCode">门禁二维码</string>
    <string name="phone_code">+86</string>
    <string name="phone_hint">请输入您的手机号</string>
    <string name="agreement">我已阅读并同意《用户协议与隐私政策》</string>
    <string name="btn_next">下一步</string>v
    <string name="register_login">注册登录</string>
</resources>
