<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myf.baokuqzz.activity.RegisterLoginActivity">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_marginStart="36dp"
            android:padding="10dp"
            android:text="@string/phone_code"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@color/color_gray_five"/>
        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/agreement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:padding="11dp"
            android:scaleType="fitXY"
            android:src="@drawable/check_no"
            />
        <Button
            android:id="@+id/btn_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/agreement"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_next"
        style="@style/btn_next"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next"
        android:background="@drawable/btn_main_red"
        />
</LinearLayout>
