<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myf.baokuqzz.activity.RoutePlanActivity">
    <include layout="@layout/layout_title" android:id="@+id/header" />
    <com.baidu.mapapi.map.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        >
        <LinearLayout
            android:id="@+id/route_bus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/shape_leftradius_red"
            >
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/icon_bus"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/radio_bus"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <View style="@style/view_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_three"
            />
        <LinearLayout
            android:id="@+id/route_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/color_gray1"
            >
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/icon_car"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/radio_car"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <View style="@style/view_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray_three"
            />
        <LinearLayout
            android:id="@+id/route_walk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/shape_rightradius_gray"
            >
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/icon_walk"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/radio_walk"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
