<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:background="@color/color_menu_back"
    >
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/menu_header"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        fresco:placeholderImage="@drawable/default_header"
        fresco:roundAsCircle="true"
        />
    <TextView
        android:id="@+id/menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_header"
        android:layout_alignRight="@+id/menu_header"
        android:layout_below="@+id/menu_header"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="22sp"
        />
    <LinearLayout
        android:id="@+id/line_check"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/menu_name"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_is_validName"
            android:layout_width="12dp"
            android:layout_height="12dp" />
        <TextView
            android:id="@+id/tv_is_validName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_check"
        >
        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:id="@+id/menu_index"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/menu_index_img"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_index"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/menu_index_img"
                    android:text="@string/menu_index_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/menu_map"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/menu_map_img"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_map"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/menu_map_img"
                    android:text="@string/menu_map_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/menu_news"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/menu_news_img"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_news"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/menu_news_img"
                    android:text="@string/menu_news_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/menu_box"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/menu_box_img"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_box"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/menu_box_img"
                    android:text="@string/menu_box_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/menu_order"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/menu_order_img"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_order"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/menu_order_img"
                    android:text="@string/menu_order_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/menu_account"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/menu_account_img"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu_index"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/menu_account_img"
                    android:text="@string/menu_account_text"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        >
        <ImageView
            android:id="@+id/menu_set"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:src="@drawable/menu_set"
            />
        <ImageView
            android:id="@+id/menu_phone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:src="@drawable/menu_phone"
            />
    </RelativeLayout>
</RelativeLayout>