<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/img_nearby"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_nva"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_nearby"
            android:text="@string/nearby_project"
            />
        <LinearLayout
            android:id="@+id/item_project_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/item_more"
                />
            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:src="@drawable/icon_backmore"
                />
        </LinearLayout>
        <View style="@style/view_line" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/item_project_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home_left"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_map"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nearby_most"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/txt_project_name"
                    style="@style/text_big_title"
                    tools:text="浦东星河湾"
                    />
                <TextView
                    android:id="@+id/txt_project_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:gravity="center"
                    android:background="@drawable/home_red_km_btn"
                    tools:text="3.1KM"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_project_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="上海市-浦东新区锦绣路248号"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>